パーミッション確認追加

--- a/InfoPlist.xcstrings
+++ b/InfoPlist.xcstrings
@@ -36,6 +36,18 @@
           }
         }
       }
+    },
+    "NSUserTrackingUsageDescription" : {
+      "comment" : "Privacy - Tracking Usage Description",
+      "extractionState" : "extracted_with_value",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "広告のパーソナライズのためにトラッキングを使用します"
+          }
+        }
+      }
     }
   },
   "version" : "1.1"
